[package]
name = "async_t"
version = "0.3.0"
edition = "2021"
description = "zero-cost async-traits"
license = "MIT"
repository = "https://github.com/znx3p0/async_t"
keywords = [ "async-trait", "async" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_t_internal = { path = "../async_t_internal" }
async-trait = "0.1"
rustversion = "1"
