[package]
name = "async_t_internal"
version = "0.1.1"
edition = "2021"
description = "contains async_t macro"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full" ] }
quote = "1"

[lib]
proc-macro = true
